# pythonic_assistant

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  scratch.py
_archived/messaging/: twilio_wrapper.py
_archived/pythonic_assistant/: pythonic_assistant.py
_archived/pythonic_assistant/openai_wrappers/: assistants_wrapper.py  docs_parser.py  runs_wrapper.py  threads_wrapper.py
_archived/pythonic_assistant/openai_wrappers/function_calling_examples/: fc_example_3.json
_log/: log.py
function_calling_examples/: fc_example_1.json  fc_example_2.json
pythonic_assistant/: pythonic_assistant.py  scratch.py
pythonic_assistant/openai_wrappers/: docs_parser.py
web_backend/: web_backend.py
web_frontend/: interface.py
